--- a/培训要求/@开发组第1期培训.md
+++ b/培训要求/@开发组第1期培训.md
@@ -48,12 +48,10 @@
 
 #### 布局一
 
-![image-20220716184505800](C:\Users\Adam\AppData\Roaming\Typora\typora-user-images\image-20220716184505800.png)
-
+![avatar](../images/屏幕截图%202022-07-16%20191612.png)
 #### 布局二
 
-![image-20220716184607598](C:\Users\Adam\AppData\Roaming\Typora\typora-user-images\image-20220716184607598.png)
-
+![avatar](../images/屏幕截图%202022-07-16%20191645.png)
 
 
 ### 说明
