添加培训周期

--- a/培训要求/@开发组第1期培训.md
+++ b/培训要求/@开发组第1期培训.md
@@ -42,6 +42,7 @@
 
   https://www.jetbrains.com/webstorm/
 
+
 ### 案例作业
 
 使用`css`盒子模型，布局等知识实现基本下图两个页面框架，并利用`html`填充内容，内容不做要求。
@@ -53,6 +54,13 @@
 
 ![avatar](../images/屏幕截图%202022-07-16%20191645.png)
 
+### 培训周期
+
+周期为**一周**
+
+需要大家在最后通过`qq`提交作业给 **开发组负责人**
+
+需要打包命名"**学号-姓名**"的**压缩包**
 
 ### 说明
 
