--- a/培训要求/@开发组第3期培训.md
+++ b/培训要求/@开发组第3期培训.md
@@ -47,7 +47,7 @@ http://1.117.95.22/
 ```java
 http://1.117.95.22:8888/api/ajax/test/{bound}
 
-//bound为路径参数，需要自行添加
+//bound为路径参数，需要自行添加 实际访问的时候没有"{}" 如下示例
 
 //注意bound在1~100之间，如果数值太大，运算次数过多会致使服务器宕机
 ```
