第三周培训

--- a/培训要求/@开发组第3期培训.md
+++ b/培训要求/@开发组第3期培训.md
@@ -60,7 +60,7 @@ http://1.117.95.22:8888/api/ajax/test/78
 {"code":200,"msg":"success","data":[{"id":40,"parentId":-1},{"id":35,"parentId":40},{"id":68,"parentId":40},{"id":51,"parentId":40},{"id":43,"parentId":51},{"id":67,"parentId":68},{"id":74,"parentId":51},{"id":21,"parentId":68},{"id":78,"parentId":51},{"id":62,"parentId":51}]}
 ```
 
-数据格式格式满足**树形结构**，`data`存**每个结点的`id`值**和其**父节点`id`值**，每次返回数据是**随机**生成，因此不能使用**静态函数**实现，需要使用**动态`js`**读取数据
+数据格式格式满足**树形结构**，`data`存**每个结点的`id`值**和其**父节点`id`值**，每次返回数据是**随机**生成，因此不能使用**静态函数**实现，需要使用**动态**`js`读取数据
 
 #### 作业要求：
 
